# carrierpigeon

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py
src/carrierpigeon/: __init__.py  exceptions.py  libraries.py  messages.py  utils.py
src/carrierpigeon/handlers/: base.py  json.py
tests/: example.py  schema_creator.py  test_base_handler.py  test_json_handler.py  test_libraries.py  test_messages.py  test_utils.py
tests/schemas/: greeting.v1.json  invoice_created.v1.json  post_created.v1.json  user_followed.v2.json
