[tool.poetry]
name = "carrierpigeon"
version = "0.3.0-alpha"
description = "Contract-based messages."
authors = ["Daniel Lindsley <daniel@toastdriven.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/toastdriven/carrierpigeon"
packages = [
    { include = "carrierpigeon", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42",
    "wheel",
]
build-backend = "poetry.core.masonry.api"
