[metadata]
name = carrierpigeon
version = 0.3.0-alpha
author = Daniel Lindsley
author_email = daniel@toastdriven.com
description = Contract-based messages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/toastdriven/carrierpigeon
project_urls =
    Bug Tracker = https://github.com/toastdriven/carrierpigeon/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[wheel]
universal = 1
